api-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api-vs
  namespace: skymdm-v5-jason
spec:
  hosts:
  - "apiskymdm-v5-jason.xcmdm.com"
  gateways:
  - api-gw
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 3000
        host: server-v5-xcome-ui-service
